2011-01-16  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/example1.m:
	* TestFramework/example2.m:
	* TestFramework/example3.m:
	* TestFramework/example4.m:
	* TestFramework/example5.m:
	* TestFramework/example6.m:
	* TestFramework/example7.m:
	* TestFramework/example8.m:
	* TestFramework/GNUmakefile.in:
	* TestFramework/gnustep-tests:
	* TestFramework/README:
	* TestFramework/runtest.sh:
	* TestFramework/Summary.sh:
	* TestFramework/Testing.h:
	Further cleanups, corrections, simplifications, and documentation
	improvements.
	Added --failfast option to terminate a test run at the first failure.
	Added recording of READEME to logs, and display of URGENT information.
	Added tracking of entry to subdirectories so there's something to see
	during execution ofa large testsuite.
	Added summary at end of tests (needs more work)

2011-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/Testing.h:
	* TestFramework/example1.m:
	* TestFramework/example2.m:
	* TestFramework/example3.m:
	* TestFramework/example4.m:
	* TestFramework/example5.m:
	* TestFramework/example6.m:
	* TestFramework/example7.m:
	* TestFramework/example8.m:
	* TestFramework/README:
	* GNUmakefile.in:
	Fix header file in examples.  Add comments/documentation to explain
	use of brackets in macro parameters.  Add an example to demonstrate it.

2011-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/Testing.h:
	* TestFramework/gnustep-tests:
	* TestFramework/runtest.sh:
	* TestFramework/README:
	Change test status reports to friendlier text.
	Record file and line number for each test.
	* GNUmakefile.in:
	install examples.

2011-01-13  Richard Frith-Macdonald <rfm@gnu.org>

	* TestFramework/gnustep-tests: Add --clean option
	* TestFramework/README: Describe the fact that we leave the last
	binary behind so we can easily run gdb.  Also mention --clean

2011-02-10 19:06  David Chisnall <theraven@gna.org>

	* tools/make/trunk/configure, tools/make/trunk/configure.ac: Don't